--- a/blog_prep/2018-01-26-Trump-VS-Clinton-Interpretable-Text-Classifier.Rmd
+++ b/blog_prep/2018-01-26-Trump-VS-Clinton-Interpretable-Text-Classifier.Rmd
@@ -1,15 +1,21 @@
 ---
 title: "Trump VS Clinton Interpretable Text Classifier"
-output: html_document
+always_allow_html: yes
+output: 
+  md_document:
+    variant: markdown_github
+    
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-I've been writing/talking a lot about  [LIME](https://www.oreilly.com/learning/introduction-to-local-interpretable-model-agnostic-explanations-lime)] recently: in [this blog](https://kkulma.github.io/2017-11-07-automated_machine_learning_in_cancer_detection/)/ at [H20 meetup](https://www.youtube.com/watch?v=CY3t11vuuOM), or at coming [AI Congress](https://theaicongress.com/) and I'm still in love with this tool for interpreting any, even black-box - algorithms! The part I love most is that LIME can be applied to both   
+I've been writing/talking a lot about  [LIME](https://www.oreilly.com/learning/introduction-to-local-interpretable-model-agnostic-explanations-lime)] recently: in [this blog](https://kkulma.github.io/2017-11-07-automated_machine_learning_in_cancer_detection/)/ at [H20 meetup](https://www.youtube.com/watch?v=CY3t11vuuOM), or at coming [AI Congress](https://theaicongress.com/) and I'm still sooo impressed by this tool for interpreting any, even black-box - algorithm! The part I love most is that LIME can be applied to both image and text data, that was well showcased in husky VS wolf (image) and Christian VS atheist (text) examples in the [original publication](https://arxiv.org/abs/1602.04938). [Thomas Lin Pedersen](https://twitter.com/thomasp85) did an amazing job building `lime` package for R with excellent documentation and [vignette](https://cran.r-project.org/web/packages/lime/vignettes/Understanding_lime.html). In fact, the `lime` vignette inspired a big part of this post. As you'll soon see, `lime` keeps on giving when it comes to text classification. What do you say for classifying Clinton and Trump tweets?
 
-```{r pkgs, message=FALSE}
+As always, let's start with loading necessary packages.
+
+```{r pkgs, message=FALSE, warning=FALSE}
 library(readr)
 library(lime)
 library(xgboost) # the classifier
@@ -20,16 +26,22 @@ library(text2vec)
 library(qdapRegex) # removes urls from text
 ```
 
+Next, let's load the data that was kindly provided on [Kaggle](https://www.kaggle.com/benhamner/clinton-trump-tweets).
 
 ```{r data, message=FALSE}
 tweets <- read_csv('data/tweets.csv')
+dim(tweets)
 head(tweets)
 ```
+
+Quick glimpse on the class balance, which looks very good, BTW. 
 
 ```{r classes}
 table(tweets$handle)
 ```
 
+
+Finally, let's clean the data a little: select only tweets text and author, change column names to something more readable and remove URLs from text.
 
 ```{r all_tweetts}
 all_tweets <- tweets %>% 
@@ -41,7 +53,9 @@ all_tweets <- tweets %>%
 head(as.data.frame(all_tweets))
 ```
 
-```{r model}
+OK, once we're happy with the data, it's time to split it into train and test sets - `caret` package, as always, does a great job here.
+
+```{r test_train}
 set.seed(1234)
 trainIndex <- createDataPartition(all_tweets$author, p = .8, 
                                   list = FALSE, 
@@ -53,20 +67,22 @@ test_tweets <- all_tweets[ -trainIndex,]
 str(train_tweets)
 ```
 
+In order to build the model, we need to tokenize our data and transform it to Document Term Matrices. In this example, I'll use word-level tokens:
 
-
-```{r tokens, results='hide'}
+```{r tokens}
 # tokenizes text data nad creates Document Term Matrix
 get_matrix <- function(text) {
-  it <- itoken(text, progressbar = TRUE)
-  create_dtm(it, vectorizer = hash_vectorizer(ngram = c(1L, 2L)))
+  it <- itoken(text, progressbar = FALSE)
+  create_dtm(it, vectorizer = hash_vectorizer())
 }
 
 dtm_train= get_matrix(train_tweets$text)
 dtm_test = get_matrix(test_tweets$text)
+```
 
-# Extreme gradient boosting algorithm with standard parameters
+Now, time for the model. I used Extreme Gradient Boosting tree model for classification, which usually gives very good result, even with standard parameters:
 
+```{r, model}
 param <- list(max_depth = 7, 
               eta = 0.1, 
               objective = "binary:logistic", 
@@ -83,6 +99,8 @@ xgb_model <- xgb.train(
 ```
 
 
+How does the model do? Would you trust it based on accuracy alone?
+
 ```{r predict}
 # We use a (standard) threshold of 0.5
 predictions <- predict(xgb_model, dtm_test) > 0.5
@@ -92,6 +110,9 @@ test_labels <- test_tweets$author == "realDonaldTrump"
 print(mean(predictions == test_labels))
 ```
 
+The model was accurate in 84% of cases, which is quite impressive, given how little we did in terms of data pre-processing and feature engineering. Now, what clues did the classifier pick on? Are they reasonable?
+
+In order to understand this, I'll run `lime`'s `explainer()` only on correctly predicted instances while ignoring misclassified observations. I'll pick first 5 observations for interpretation.
 
 ```{r correct, message=FALSE}
 # select only correct predictions
@@ -109,36 +130,46 @@ correct_pred = test_tweets %>%
 ```
 
 
+Now, this is important. Before we run `explainer()`, we need to detach `dplyr` package, which is a bit of a pain when you go back and forth between different chunks of code that require or hate `dplyr`, but there you go. There are worse things that can happen to your code, I suppose. 
 
-```{r detach_dplyr, message=FALSE, error=FALSE}
+```{r detach_dplyr, message=FALSE, error=FALSE, warning=FALSE}
 detach("package:dplyr", unload=TRUE) # explainer will not run with dplyr in the workspace
 ```
 
 
-```{r explainer}
+Nearly there! Let's just define the explainer and run it on the sample of correctly predicted tweets. 
+
+```{r explainer, results='hide'}
 explainer <- lime(correct_pred, model = xgb_model, 
                   preprocess = get_matrix)
-```
 
-```{r corr_explain, results='hide'}
 corr_explanation <- lime::explain(correct_pred, explainer, n_labels = 1, 
                        n_features = 6, cols = 2, verbose = 0)
 ```
 
+Ready? Here we go!
 
 ```{r features}
 plot_features(corr_explanation)
 ```
 
+Remember that `Label == 1` means Donald Trump was the author of the tweet, otherwise it was Hilary Clinton. What does `lime` tell us? Funnily enough, it looks like presence of words like `Donald`, `Trump`, `candidate` and `president` indicates that Hilary was the author, whereas words like `Hilary` and `me` or `my` are indicative of Donald Trump. Sounds reasonable to me ;)
+
+If you feel somehow ill at ease with this kind of presentation of model interpretations, try running `plot_text_explanations()` instead:
+
 ```{r text_explanations}
 plot_text_explanations(corr_explanation)
 ```
 
+It will give you a clearer view of support or contradiction of certain words for a given label, if you're interested only  in direction but not strength of this relationship.
 
-```{r interactive_text, results='hide', message=FALSE, error=FALSE}
-# Launching the application is done in one command
+Last, but definitely not least, it's possible to run a `shiny` app to interactively explore text models. It's not possible to run it in this blog, but all you need to do is run the following (single!) line of code to reveal its magic: 
+
+```{r interactive_text, results='hide', message=FALSE, error=FALSE, eval = FALSE}
 interactive_text_explanations(explainer)
 ```
+
+Hope I managed to spread a bit of my love for `lime`! Again, big thanks to Thomas for a great job he did with this package! I can't wait to see support for image data in R - but no pressure, the whole Twitter knows how busy you are :) Cheers!
 
 
 
