add r hints blog post

--- a/blog_prep/2018-03-18-Prime-Hints-for-Running-data-project-in-R.Rmd
+++ b/blog_prep/2018-03-18-Prime-Hints-for-Running-data-project-in-R.Rmd
@@ -1,6 +1,8 @@
 ---
-title: "r_best_practice"
-output: html_document
+title: "prime_hints_for_running_a_data_project_in_R"
+output: 
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
