--- a/blog_prep/2018-08-20-Exploring-London-Crimes_with_R's-Heatmaps.Rmd
+++ b/blog_prep/2018-08-20-Exploring-London-Crimes_with_R's-Heatmaps.Rmd
@@ -32,77 +32,107 @@ library(leaflet.extras)
 library(htmltools)
 ```
 
-Let's first start with 
+
+## SCRAPING WIKI
+
+Let's first start with scraping a table from Wikipedia website that holds coordinates for all London Tube stations. I used Google Selector tool for it, you can learn more about it [here](https://blog.rstudio.com/2014/11/24/rvest-easy-web-scraping-with-r/):
 
 ```{r wiki_table}
 ### scraping with rvest() ####
 
+# Wikipedia linke
 wiki_link <- "https://wiki.openstreetmap.org/wiki/List_of_London_Underground_stations"
 
+# scraping information from the table in the above URL 
 wiki_tbl <- wiki_link %>%
   read_html() %>%
   html_nodes(xpath='//*[@id="mw-content-text"]/div/table[1]') %>% 
   html_table(fill = TRUE) %>% 
   as.data.frame()
+
+head(wiki_tbl)
 ```
 
-```{r get-crime}
 
-get_crime <- function(lat, long, date, name) {
-  
-  base <- "https://data.police.uk/api/crimes-street/all-crime"
-  police_url <- paste0(base, "?", "lat=", lat, "&lng=", long, "&date=", date)  
-  get_police <- GET(police_url)
-  
-  police_data_json <- content(get_police, "text")
-  police_data <- fromJSON(police_data_json, flatten = TRUE) %>% 
-    mutate(location = name)
-  return(police_data)
-  
-}
-```
-
+First thing done. Now, it would take a stupid amount of data to pull all the crime information for extended periods of time for ALL of the Tube stations, so let's pick a sample of 20 places instead and take it from there:
 
 ```{r london-sample}
+# pick only coordinates and a station name from Wikipedia table
 wiki_selected <- 
   wiki_tbl %>% 
   select(name = Name,
          lat = Latitude,
          long = Longitude)
 
+# pick a random sample of 20 Tube stations
 set.seed(999)
 k <- sample(as.numeric(rownames(wiki_selected)), 20)
 wiki_sample <- wiki_selected[k, ]
 wiki_sample
 ```
 
+## PULLING DATA FROM DATA.POLICE.UK API
+
+Now that we have coordinates, we can feed them into the UK Police API that requires the following parameters: latitude, longitude and year-month which we want to pull crime data for. To make everyone's life easier, I define a function `get_crime()` which will require all three parameters but also a name of the station that coordinates correspond to:
+
+```{r get-crime}
+
+get_crime <- function(lat, long, date, name) {
+  # pull specified data from the API 
+  base <- "https://data.police.uk/api/crimes-street/all-crime"
+  police_url <- paste0(base, "?", "lat=", lat, "&lng=", long, "&date=", date)  
+  get_police <- GET(police_url)
+  
+  # parse JSON file into a clean data frame
+  police_data_json <- content(get_police, "text")
+  police_data <- fromJSON(police_data_json, flatten = TRUE) %>% 
+    mutate(location = name)
+  
+  return(police_data)
+  
+}
+```
+
+
+So far so good. However, our brand new `get_crime()` function can pull data only for a single location and a single month. Let's use it in the `for loop` together with amazing `pmap()` function from `purrr` package to get all the data we need. **WARNING**: the code below needs good 15 minutes to run, so think twice before you execute it!
 
 ```{r get-met-data, eval=FALSE}
-# mutli-loation multi-month test ####
-iter_months <- str_sub(seq(ymd('2016-01-01'),ymd('2018-06-20'), by = 'month'),
+# create a series of months that we want data for
+iter_months <- str_sub(seq(ymd('2016-01-01'), ymd('2018-06-20'),
+                           by = 'month'),
                        start = 1, end = 7)
 
+# pull data from API for all the locations over all the months
 final_df<-data.frame()
 for(i in 1:length(iter_months)){
+  # result will be a list
   pre_final_list <- pmap(list(lat = wiki_sample$lat,
                               long = wiki_sample$long,
                               name = wiki_sample$name,
                               date = iter_months[i]),
                          get_crime)
-  pre_final_df <- bind_rows(pre_final_list)
+  # turn a list of locations in one month into a data.frame
+  pre_final_df <- bind_rows(pre_final_list) 
+  # put all the clean data.frames together
   final_df <- bind_rows(final_df, pre_final_df)
   
 }
 ```
 
+Phew! That was hard work, but it was clearly worth it! Let's have a `glimpse()`!
 ```{r load-rds, echo=FALSE}
 final_df <- readRDS("data/20180719-final-police-df-Jan16-June18.rds")
 glimpse(final_df)
 ```
 
+Looks great, but did we really pull data for all the locations and all months?
 ```{r location-breakdown}
 table(final_df$location, final_df$month)
 ```
+Oh, yes we did!
+
+
+Let's finish off with some minor data cleaning: API returns coordinates for crimes, but not for the original location of interest (Tube station), let's fix it:
 
 ```{r add-names}
 final_df <- final_df %>% 
@@ -112,11 +142,14 @@ final_df <- final_df %>%
           search_long = long)
 ```
 
+Finally, for some heat maps, all time data will be too much to handle. In those cases I'll focus on one month only, July 2017:
 ```{r july-data}
 july_data <- final_df %>%
   filter(date == "2017-07")
 ```
 
+
+## HEAT MAPP-ING
 ```{r tiled-heatmap1}
 ### tiled heat map of all crimes ####
 police_grid <- final_df %>%
